# hermes-guard

./: .gitignore  README.md  SPEC.md  pyproject.toml
.github/workflows/: ci.yml
docs/: alpha-manual-checklist.md  local-hermes-integration.md
examples/: guard-policy.yaml
examples/hermes-plugin/: __init__.py  plugin.yaml
hermes_guard/: __init__.py  cli.py  grants.py  hermes_adapter.py  logging_utils.py  models.py  path_rules.py  plugin_entry.py  policy.py  policy_store.py  pre_tool_hook.py  restore_points.py  terminal_policy.py  update_manager.py
scripts/: install_local_plugin.py
tests/: test_cli_grants.py  test_cli_update.py  test_example_policy.py  test_grants.py  test_hermes_adapter.py  test_imports.py  test_path_rules.py  test_plugin_entry.py  test_policy_core.py  test_pre_tool_hook.py  test_terminal_policy.py  test_update_manager.py
