[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-guard"
version = "0.1.0"
description = "A minimal permission control plane for Hermes: policy guardrails, explicit grants, and tag-first update rollback."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
  { name = "Hyena0x" }
]
keywords = ["hermes", "agent", "policy", "permission", "guard", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "PyYAML>=6.0",
  "filelock>=3.16.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.urls]
Repository = "https://github.com/Hyena0x/hermes-guard"

[project.scripts]
guard = "hermes_guard.cli:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["hermes_guard*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
